--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.3.5",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.3.5",
+    "styled-reset": "^4.4.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/react-query": "^1.2.9"
+    "@types/react-query": "^1.2.9",
+    "react-error-overlay": "6.0.9"
   }
 }
