--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
+    "antd": "^4.16.7",
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
